FullQa New/src/objects/Connector_of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>CameleonCPQ__Quote__c</referenceTo>
        <relationshipLabel>Connector of Interest</relationshipLabel>
        <relationshipName>Connector_of_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <formula>IF(NOT(ISBLANK( Order__c )), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <label>Connector of Interest</label>
    <nameField>
        <displayFormat>coi{0000}</displayFormat>
        <label>Connector of Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connector of Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>